--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -86,7 +86,7 @@
   }
 
   &__logo {
-    margin: 0 auto;
+    margin: 0 auto -9px;
 
     @include pc {
       margin-right: 250px;
@@ -98,7 +98,7 @@
     }
 
     .header-scroll & {
-      margin: 0 auto;
+      margin: 0 auto -9px;
     }
   }
 
