--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,18 @@
 @import "utils";
-@import "fonts";
-@import "typography";
-
-body {
-  background: $c-gray;
-}
+@import "helpers/container";
+@import "blocks/page";
+@import "blocks/header";
+@import "blocks/menu";
+@import "blocks/footer";
+@import "blocks/title";
+@import "blocks/icon";
+@import "blocks/logo";
+@import "blocks/nav";
+@import "blocks/article";
+@import "blocks/lection";
+@import "blocks/date";
+@import "blocks/swiper";
+@import "blocks/subscription";
+@import "blocks/info";
+@import "blocks/actual-news";
+@import "blocks/gallery";
