--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,15 @@
-$c-gray: #eee;
+$menu-breakpoint: 530px;
+$tablet-min-width: 768px;
+$desktop-min-width: 1280px;
+$background-color: #fff;
+$green-color: #1a5a4c;
+$black-color: #0F0E08;
+$gray-main-color: #687480;
+$gray-second-color: #4E4E4E;
+$orange-color: #F14A27;
+$effect-duration: 0.3s;
+$columns-on-mobile: 2;
+$columns-on-tablet: 6;
+$columns-on-desktop: 12;
+$montserrat: Montserrat, sans-serif;
+$swiper-pagination-bottom: 128px;
