--- a/src/styles/blocks/date.scss
+++ b/src/styles/blocks/date.scss
@@ -11,10 +11,12 @@
 
   &--padding {
     margin-bottom: 20px;
+    padding-inline: 20px;
 
     @include on-tablet {
       margin-bottom: 16px;
-      justify-content: space-between;
+      justify-content: space-around;
+      padding: 0;
     }
   }
 
@@ -42,10 +44,10 @@
     }
 
     &--width {
-      width: 220px;
+      margin-left: 188px;
 
       @include on-desktop {
-        width: 170px;
+        // width: 170px;
       }
     }
   }
