--- a/src/styles/blocks/lection.scss
+++ b/src/styles/blocks/lection.scss
@@ -18,6 +18,7 @@
   }
 
   &__info {
+    box-sizing: border-box;
     background-color: $background-color;
     padding-block: 20px;
     border-bottom: 2px solid $gray-main-color;
@@ -31,7 +32,6 @@
     @include on-desktop {
       padding: 45px 100px 50px;
       transform: translateY(448px);
-      width: 570px;
       margin-inline: auto;
     }
   }
