--- a/src/styles/blocks/events.scss
+++ b/src/styles/blocks/events.scss
@@ -1,12 +1,16 @@
 .events {
-  @include contentpadding;
   @include pagegrid;
 
-  margin: 0;
-  padding-top: 253px;
+  margin: 70px 20px 0;
 
   @include ontable {
-    padding-top: 200px;
+    margin: 107px 34px  0;
+  }
+
+  @include ondesktop {
+    margin: 200px 0 0;
+
+    @include contentpadding;
   }
 
   &-title {
@@ -37,6 +41,11 @@
     align-items: center;
     grid-column: 1 / -1;
     padding-top: 40px;
+    transition: transform 0.5s ease-in-out;
+
+    &:hover {
+      transform: scale(1.05);
+    }
 
     @include ontable {
       height: 520px;
