--- a/src/styles/blocks/exhibition.scss
+++ b/src/styles/blocks/exhibition.scss
@@ -8,7 +8,7 @@
   }
 
   @include ondesktop {
-    padding: 263px 0 0 800px;
+    margin: 263px 0 0 800px;
     grid-column: 7 / -1;
     position: absolute;
   }
@@ -19,31 +19,40 @@
     }
 
     @include ondesktop {
-      padding: 874px 0 0 800px;
+      margin: 874px 0 0 800px;
+      grid-column: 7 / -1;
+    }
+  }
+
+  &__conteiner {
+    display: flex;
+    justify-content: space-between;
+
+    @include ontable {
+      width: 220px;
+      height: 15px;
+      justify-content: space-between;
+    }
+
+    @include ondesktop {
       grid-column: 7 / -1;
     }
   }
 
   &__name {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
     margin: 0;
-    padding-top: 20px;
     font-family: 'IBM Plex Sans', sans-serif;
     font-weight: 500;
     font-size: 16px;
     color: $color-for-name;
 
     @include ontable {
-      padding-top: 40px;
+      // margin-top: 40px;
       font-size: 14px;
-      width: 220px;
-      height: 15px;
     }
 
     @include ondesktop {
-      padding-top: 0;
+      margin-top: 0;
       grid-column: 7 / -1;
     }
   }
@@ -62,8 +71,6 @@
 
   &__title {
     display: flex;
-    flex-direction: row;
-    justify-content: space-between;
     padding-top: 15px;
     margin: 0;
     font-family: Montserrat, sans-serif;
@@ -81,8 +88,7 @@
   }
 
   &__block {
-    display: inline-block;
-    margin-right: 5px;
+    margin-left: 10px;
     margin-top: 12px;
     width: 10px;
     height: 10px;
