--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -3,6 +3,8 @@
   margin-top: 50px;
   padding: 0;
 
+  @include contentpadding;
+
   &__images {
     display: flex;
     justify-content: space-between;
@@ -16,6 +18,11 @@
     margin-left: 20px;
     width: 63px;
     height: 72px;
+    transition: transform 0.5s ease-in-out;
+
+    &:hover {
+      transform: scale(1.03);
+    }
 
 
     @include ontable {
@@ -56,8 +63,14 @@
   }
 
   &__facebook {
+    cursor: pointer;
     background-image: url(../images/facebook-letter-logo.svg);
     margin-right: 20px;
+    transition: transform 0.5s ease-in-out;
+
+    &:hover {
+      transform: scale(1.03);
+    }
 
     @include ontable {
       margin-right: 32px;
@@ -65,6 +78,12 @@
   }
 
   &__instagram {
+    cursor: pointer;
     background-image: url(../images/instagram-logo.svg);
+    transition: transform 0.5s ease-in-out;
+
+    &:hover {
+      transform: scale(1.03);
+    }
   }
 }
