--- a/src/styles/blocks/footer__contacts.scss
+++ b/src/styles/blocks/footer__contacts.scss
@@ -32,5 +32,14 @@
       width: 220px;
       height: 105px;
     }
+
+    &__address {
+      text-decoration: none;
+      color: $main-black-color;
+
+      &:hover {
+        color: $main-green-color;
+      }
+    }
   }
 }
