--- a/src/styles/blocks/footer__links.scss
+++ b/src/styles/blocks/footer__links.scss
@@ -29,6 +29,10 @@
       font-weight: 400;
       font-size: 14px;
       color: $main-black-color;
+      
+      &:hover {
+        color: $main-green-color;
+      }
 
       @include ontable {
         width: 220px;
