--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -1,4 +1,5 @@
 .header {
+  width: 100%;
 
   &__content {
   @include pagegrid;
@@ -33,12 +34,18 @@
 
   &__logo {
     position: absolute;
+    right: 0;
     display: flex;
     justify-content: center;
     align-items: center;
     margin-top: 6px;
     left: 50%;
     transform: translate(-50%, 0);
+    transition: transform 0.5s ease-in-out;
+
+    &:hover {
+      transform: scale(1.05);
+    }
 
     @include ontable {
       width: 220px;
@@ -61,11 +68,11 @@
     position: absolute;
     text-align: center;
     padding-top: 320px;
-    margin-right: auto;
     grid-column: 1 / -1;
     font-weight: 700;
     font-size: 45px;
     line-height: 45px;
+    margin: 0;
 
     @include ontable {
       text-align: left;
