--- a/src/styles/blocks/landscape.scss
+++ b/src/styles/blocks/landscape.scss
@@ -1,3 +1,7 @@
+.landscape__exhibition {
+  width: 100%;
+}
+
 .landscape {
   padding-top: 60px;
   grid-column: 1 / -1;
@@ -7,20 +11,27 @@
     padding-top: 112px;
   }
 
+  @include ondesktop {
+    padding-top: 104px;
+  }
+
   &__image {
     margin: 0;
     padding: 0;
+    grid-column: 1 / -1;
     width: 100%;
     height: 210px;
 
     @include ontable {
       margin: 0 34px;
       height: 390px;
+      width: calc(100% - 2 * 34px);
     }
 
     @include ondesktop {
       margin: 0;
       height: 550px;
+      width: 100%;
     }
   }
 
