--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -22,3 +22,5 @@
 @import "blocks/footer__brench";
 @import "blocks/footer__links";
 @import "blocks/contacts__phone__number";
+@import "blocks/event";
+@import "blocks/footer__phone";
