--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -6,8 +6,7 @@
   right: 0;
 
   width: 100%;
-  height: 400px;
-  background-color: $main-green-color;
+  height: 100%;
   z-index: 1;
 
   opacity: 0;
@@ -19,12 +18,32 @@
     overflow: auto;
   }
 
-  @include ontable {
-    height: 255px;
+  &__container {
+    opacity: 1;
+    position: absolute;
+    top: 0;
+    width: 100%;
+    height: 400px;
+    background-color: $main-green-color;
+    z-index: 1;
+
+    @include ontable {
+      height: 255px;
+    }
+
+    @include ondesktop {
+      height: 233px;
+    }
   }
 
-  @include ondesktop {
-    height: 233px;
+  &__foropacity {
+    opacity: 50%;
+    position: absolute;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: $main-black-color;
+    z-index: 0;
   }
 
   &__icon {
@@ -90,5 +109,10 @@
     font-weight: 500;
     font-size: 16px;
     color: $main-white-color;
+    transition: 0.3s ease-in-out;
+
+    &:hover {
+      color: $main-black-color;
+    }
   }
 }
