--- a/src/styles/blocks/gallery.scss
+++ b/src/styles/blocks/gallery.scss
@@ -87,6 +87,9 @@
     }
 
     &--third {
+      width: 280px;
+      height: 410px;
+
       @include ontable {
         width: 340px;
         height: 543px;
