--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -35,12 +35,15 @@
   &__logo {
     position: absolute;
     right: 0;
+    width: 50px;
+    height: 50px;
     display: flex;
     justify-content: center;
     align-items: center;
     margin-top: 6px;
     left: 50%;
-    transform: translate(-50%, 0);
+
+    // transform: translate(-50%, 0);
     transition: transform 0.5s ease-in-out;
 
     &:hover {
