--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,17 @@
 @import "utils";
 @import "fonts";
 @import "typography";
+@import './blocks/header';
+@import './blocks/action';
+@import './blocks/page';
+@import './blocks/poster';
+@import './blocks/lection';
+@import './blocks/subscription';
+@import './blocks/schedule';
+@import './blocks/footer';
+@import './blocks/gallery';
+@import './blocks/aside';
 
-body {
-  background: $c-gray;
-}
+
+
+
