--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,15 @@
+@import "./block/page";
 @import "utils";
-@import "fonts";
-@import "typography";
-
-body {
-  background: $c-gray;
-}
+@import "./block/header";
+@import "./block/menu";
+@import "./block/icon";
+@import "./block/nav";
+@import "./block/schedule";
+@import "./block/tickets";
+@import "./block/main";
+@import "./block/actual";
+@import "./block/galery";
+@import "./block/about-us";
+@import "./block/form";
+@import "./block/contacts";
+@import "./block/footer";
