--- a/src/styles/block/contacts.scss
+++ b/src/styles/block/contacts.scss
@@ -185,6 +185,30 @@
     &-description {
       margin: 0;
     }
+
+    &-link {
+      display: inline-block;
+      text-decoration: none;
+      color: #0F0E08;
+      position: relative;
+
+      &::after {
+        content: "";
+        position: absolute;
+        display: block;
+        background-color: #0F0E08;
+        width: 100%;
+        height: 1px;
+
+        transition: transform 0.4s;
+        transform: scale(0);
+        transform-origin: left;
+      }
+
+      &:hover::after {
+        transform: scale(1);
+      }
+    }
   }
 
   &__nav {
