--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,36 @@
 @import "utils";
 @import "fonts";
 @import "typography";
+@import "utils/vars";
+@import "utils/extends";
+@import "utils/mixins";
+@import "header/header";
+@import "header/icon";
+@import "header/arrow";
+@import "header/menu";
+
+* {
+  box-sizing: border-box;
+}
 
 body {
-  background: $c-gray;
+  margin: 0;
+  background: white;
+}
+
+p, h1, h2, h3, button {
+  margin: 0;
+  padding: 0;
+}
+
+.container {
+  padding-inline: 20px;
+
+  @include on-tablet {
+    padding-inline: 39px;
+  }
+
+  @include on-desktop {
+    padding-inline: 55px;
+  }
 }
