--- a/src/styles/modules/_top-bar.scss
+++ b/src/styles/modules/_top-bar.scss
@@ -1,10 +1,19 @@
 .top-bar {
+  position: absolute;
   display: flex;
   align-items: center;
-
+  width: 100%;
   padding-block: 15px;
 
   &__logo {
     margin-inline: auto;
+
+    @include on-tablet {
+      margin-right: 300px;
+    }
+
+    @include on-desktop {
+      margin-inline: auto;
+    }
   }
 }
