--- a/src/styles/header/icon.scss
+++ b/src/styles/header/icon.scss
@@ -2,8 +2,8 @@
   display: block;
   background-repeat: no-repeat;
   background-size: contain;
-  width: 24px;
-  height: 24px;
+  width: $icon-side;
+  height: $icon-side;
 
   &--menu {
     position: absolute;
@@ -29,6 +29,25 @@
     width: 55px;
     height: 61px;
     background-image: url(../images/logo/NAMU-logo.svg);
+    margin: auto;
+    
+    @include on-tablet {
+      width: 72px;
+      height: 72px;
+    }
+  }
+
+  &--footer {
+    margin: 0;
+  }
+
+  &--facebook {
+    background-image: url(../images/icon/facebook.svg);
+    margin: auto;
+  }
+
+  &--instagram {
+    background-image: url(../images/icon/instagram.svg);
     margin: auto;
   }
 }
