--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -2,15 +2,24 @@
 @import "fonts";
 @import "typography";
 @import "utils/vars";
-@import "utils/extends";
 @import "utils/mixins";
 @import "header/header";
 @import "header/icon";
 @import "header/arrow";
 @import "header/menu";
+@import "main/main";
+@import "main/events";
+@import "main/gallery";
+@import "main/slider";
+@import "main/subscribe";
+@import "footer/footer";
 
 * {
   box-sizing: border-box;
+}
+
+html {
+  scroll-behavior: smooth;
 }
 
 body {
@@ -18,9 +27,45 @@ body {
   background: white;
 }
 
-p, h1, h2, h3, button {
+h1, h2 {
+  font-family: Montserrat, sans-serif;
+  font-weight: 700;
+}
+
+h3, input {
+  font-family: Montserrat, sans-serif;
+  font-weight: 400;
+}
+
+p {
+  font-family: "IBM Plex Sans", sans-serif;
+  font-weight: 300;
+}
+
+span, a, button {
+  font-family: "IBM Plex Sans", sans-serif;
+  font-weight: 500;
+}
+
+div {
+  font-family: "IBM Plex Sans", sans-serif;
+  font-weight: 700;
+}
+
+
+p, h1, h2, h3, button, ul, li {
   margin: 0;
   padding: 0;
+  list-style: none;
+}
+
+a {
+  text-decoration: none;
+  color: white;
+}
+
+a, button {
+  cursor: pointer;
 }
 
 .container {
