--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -2,3 +2,8 @@ $tablet-min-width: 640px;
 $desktop-min-width: 1280px;
 $green: #1A5A4C;
 $grey: #687480;
+$text: #4E4E4E;
+$red: #F14A27;
+$black: #0F0E08;
+$icon-side: 24px;
+$slider-height: 100%;
