--- a/src/styles/utils/_extends.scss
+++ b/src/styles/utils/_extends.scss
@@ -1,10 +1,15 @@
-%h1, %h2 {
-  font-family: "Montserrat", sans-serif;
+%h1 {
+  font-family: Montserrat, sans-serif;
+  font-weight: 700;
+}
+
+%h2 {
+  font-family: Montserrat, sans-serif;
   font-weight: 700;
 }
 
 %h3 {
-  font-family: "Montserrat", sans-serif;
+  font-family: Montserrat, sans-serif;
   font-weight: 400;
 }
 
