--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -9,3 +9,22 @@
     @content;
   }
 }
+
+@mixin grid($mobile, $tablet, $desktop) {
+  display: grid;
+  column-gap: 20px;
+
+  --columns: #{$mobile};
+
+  grid-template-columns: repeat(var(--columns), 1fr);
+
+  @include on-tablet {
+    --columns: #{$tablet};
+
+    column-gap: 30px;
+  }
+
+  @include on-desktop {
+    --columns: #{$desktop};
+  }
+}
