--- a/src/styles/header/icon.scss
+++ b/src/styles/header/icon.scss
@@ -4,6 +4,11 @@
   background-size: contain;
   width: $icon-side;
   height: $icon-side;
+  transition: transform .3s;
+
+  &:hover {
+    @include scale;
+  }
 
   &--menu {
     position: absolute;
@@ -30,7 +35,7 @@
     height: 61px;
     background-image: url(../images/logo/NAMU-logo.svg);
     margin: auto;
-    
+
     @include on-tablet {
       width: 72px;
       height: 72px;
