--- a/src/styles/main/slider.scss
+++ b/src/styles/main/slider.scss
@@ -54,11 +54,11 @@
   background: $green;
 }
 
-.radio1:checked ~ .first{
+#radio1:checked ~ .first{
   margin-left: 0;
 }
 
-.radio2:checked ~ .first{
+#radio2:checked ~ .first{
   margin-left: -60%;
 
   @include on-tablet {
@@ -66,7 +66,7 @@
   }
 }
 
-.radio3:checked ~ .first{
+#radio3:checked ~ .first{
   margin-left: -120%;
 
   @include on-tablet {
@@ -74,7 +74,7 @@
   }
 }
 
-.radio4:checked ~ .first{
+#radio4:checked ~ .first{
   margin-left: -180%;
 
   @include on-tablet {
