--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -28,3 +28,21 @@
     --columns: #{$desktop};
   }
 }
+
+@mixin after-line {
+  content: '';
+  position: absolute;
+  bottom: -3px;
+  display: block;
+  height: 1px;
+  width: 100%;
+  background-color: $black;
+  transition: transform .3s;
+  transform: scale(0);
+  transform-origin: left;
+}
+
+@mixin scale {
+  transition: transform .3s;
+  transform: scale(110%);
+}
