--- a/src/styles/header/arrow.scss
+++ b/src/styles/header/arrow.scss
@@ -6,6 +6,11 @@
   border: none;
   position: absolute;
   right: 0;
+  transition: all .3s;
+
+  &:hover {
+    background-position: right;
+  }
 
   &--header {
     background-image: url(../images/arrow/arrow-white.svg);
