--- a/src/styles/header/menu.scss
+++ b/src/styles/header/menu.scss
@@ -1,20 +1,30 @@
 .menu {
-  height: max-content;
   width: 100vw;
-  background-color: $green;
   z-index: 1;
   overflow: auto;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  padding-block: 27px;
 
   font-family: "IBM Plex Sans", sans-serif;
   font-weight: 400;
   color: white;
 
-  @include on-tablet {
-    flex-direction: row;
+  &__green {
+    padding-block: 27px;
+
+    height: max-content;
+    background-color: $green;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+
+    @include on-tablet {
+      flex-direction: row;
+    }
+  }
+
+  &__dark {
+    background-color: $black;
+    opacity: .3;
+    height: 100vh;
   }
 
   &__nav {
@@ -83,17 +93,33 @@
     margin-block: 24px;
 
     @include on-tablet {
-      height: 100;
+      height: 18vh;
       width: 1px;
       margin-block: 0;
       margin-inline: 38px;
     }
   }
+
   &__link {
+    position: relative;
+
+    &::after {
+      @include after-line;
+      background-color: white;
+    }
+
+    &:hover::after {
+      transform: scale(1);
+    }
+
     &--footer {
       color: $black;
       font-size: 14px;
       font-weight: 400;
+
+      &::after {
+        background-color: $black;
+      }
     }
   }
 }
@@ -169,5 +195,5 @@
 }
 
 .page.target-active {
-  background-color: rgba(0, 0, 0, 0.5);
+  overflow: hidden;
 }
