develop menu and header

--- a/src/styles/modules/_icon.scss
+++ b/src/styles/modules/_icon.scss
@@ -9,4 +9,8 @@
   &-menu {
     background-image: url('./../images/icons/icon-menu.svg');
   }
+
+  &-close {
+    background-image: url('./../images/icons/icon-close.svg');
+  }
 }
