--- a/src/styles/modules/_top-bar.scss
+++ b/src/styles/modules/_top-bar.scss
@@ -1,5 +1,4 @@
 .top-bar {
-  position: absolute;
   display: flex;
   align-items: center;
   width: 100%;
@@ -15,5 +14,9 @@
     @include on-desktop {
       margin-inline: auto;
     }
+  }
+
+  &__close {
+    margin-right: 30px;
   }
 }
