--- a/src/styles/utils/_variables.scss
+++ b/src/styles/utils/_variables.scss
@@ -4,9 +4,14 @@ $font-second: Montserrat, sans-serif;
 
 // Размеры
 $size-mobile: 320px;
-$size-tablet: 640px;
+$size-tablet: 768px;
 $size-desktop: 1280px;
 $size-large: 1440px;
 
 // Цвета
 $color-bg-main: #1A5A4C;
+$color-bg-menu: #1A5A4C;
+$color-text-menu: #FFF;
+
+// Таймеры
+$time-animation: 0.3s;
