--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -7,9 +7,11 @@
 @import './modules/logo';
 @import './modules/icon';
 @import './modules/top-bar';
+@import './modules/nav';
 
 // Blocks
 @import './blocks/header';
+@import './blocks/menu';
 
 * {
   margin: 0;
