--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,19 @@
-@import "utils";
-@import "fonts";
-@import "typography";
+@import 'utils/vars';
+@import 'utils/mixins';
+@import 'utils/extends';
+@import 'blocks/page';
+@import 'blocks/header';
+@import 'blocks/museum';
+@import 'blocks/button';
+@import 'blocks/menu';
+@import 'blocks/nav';
+@import 'blocks/work-days';
+@import 'blocks/actuals';
+@import 'blocks/slides';
+@import 'blocks/classicism';
+@import 'blocks/gallery';
+@import 'blocks/subscribe';
+@import 'blocks/footer';
+@import 'blocks/images';
+@import 'blocks/contacts';
 
-body {
-  background: $c-gray;
-}
