--- a/src/styles/blocks/gallery.scss
+++ b/src/styles/blocks/gallery.scss
@@ -37,8 +37,9 @@
     @include on-desktop {
       margin-top: 56px;
       overflow-x: initial;
-      @include page-grid;
       gap: 30px;
+
+      @include page-grid;
     }
   }
 
@@ -57,7 +58,7 @@
 
     @include on-desktop {
       width: 100%;
-      // height: 600px;
+      height: 600px;
     }
 
     @include hover(transform, scale(1.05));
