--- a/src/styles/utils/_variables.scss
+++ b/src/styles/utils/_variables.scss
@@ -12,6 +12,13 @@ $size-large: 1440px;
 $color-bg-main: #1A5A4C;
 $color-bg-menu: #1A5A4C;
 $color-text-menu: #FFF;
+$color-title-main: #0F0E08;
+$color-subtitle: #687480;
+$color-date: #1A5A4C;
+$color-square: #F14A27;
+$color-card-text: #4E4E4E;
+$color-dot: #E0E0E0;
+$color-dot-hover: #1A5A4C;
 
 // Таймеры
 $time-animation: 0.3s;
