--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -9,7 +9,6 @@
 @import './modules/top-bar';
 @import './modules/nav';
 @import './modules/card';
-@import './modules/slider';
 
 // Blocks
 @import './blocks/header';
@@ -30,4 +29,8 @@
 
 html {
   scroll-behavior: smooth;
+
+  &:has(.menu:target) {
+    overflow: hidden;
+  }
 }
