--- a/src/styles/blocks/_gallery.scss
+++ b/src/styles/blocks/_gallery.scss
@@ -1,5 +1,10 @@
 .gallery {
   margin-bottom: 100px;
+  overflow: hidden;
+
+  @include on-tablet {
+    margin-bottom: 200px;
+  }
 
   &__title {
     margin-bottom: 40px;
@@ -9,5 +14,105 @@
     font-weight: 700;
     line-height: 100%;
     text-align: center;
+
+    @include on-tablet {
+      font-size: 48px;
+      text-align: left;
+    }
+  }
+
+  &__images {
+    display: flex;
+    flex-wrap: nowrap;
+    gap: 20px;
+    margin-bottom: 20px;
+    width: 400%;
+
+    @include on-desktop {
+      display: grid;
+      grid-template-columns: repeat(3, 1fr);
+      grid-template-rows: 600px, 360px;
+      gap: 30px;
+      width: 100%;
+    }
+  }
+
+  &__img {
+    width: 100%;
+    height: 550px;
+    background-size: cover;
+    background-position: top center;
+    background-repeat: no-repeat;
+
+    @include on-tablet {
+      width: 340px;
+      height: 545px;
+    }
+
+    @include on-desktop {
+      width: 100%;
+    }
+
+    &-1 {
+      background-image: url('./../images/gallery/photo-1.png');
+
+      @include on-desktop {
+        height: 600px;
+        grid-column: 1 / 2;
+        grid-row: 1;
+      }
+    }
+
+    &-2 {
+      background-image: url('./../images/gallery/photo-2.png');
+
+      @include on-desktop {
+        height: 600px;
+        grid-column: 2 / 4;
+        grid-row: 1;
+      }
+    }
+
+    &-3 {
+      background-image: url('./../images/gallery/photo-3.png');
+
+      @include on-desktop {
+        height: 360px;
+        grid-column: 1 / 3;
+        grid-row: 2;
+      }
+    }
+
+    &-4 {
+      background-image: url('./../images/gallery/photo-4.png');
+
+      @include on-desktop {
+        height: 360px;
+        grid-column: 3 / 4;
+        grid-row: 2;
+      }
+    }
+  }
+
+  &__dots {
+    display: flex;
+    justify-content: center;
+    gap: 22px;
+
+    @include on-desktop {
+      display: none;
+    }
+  }
+
+  &__dot {
+    width: 10px;
+    height: 10px;
+    border-radius: 50%;
+    background-color: $color-dot;
+    cursor: pointer;
+
+    &:hover {
+      background-color: $color-dot-hover;
+    }
   }
 }
