--- a/src/styles/utils/_variables.scss
+++ b/src/styles/utils/_variables.scss
@@ -19,6 +19,10 @@ $color-square: #F14A27;
 $color-card-text: #4E4E4E;
 $color-dot: #E0E0E0;
 $color-dot-hover: #1A5A4C;
+$color-text-subscribe: #FFF;
+$color-text-input: #4d555e;
+$color-text-placeholder: #687480;
+$color-bg-btn: #F14A27;
 
 // Таймеры
 $time-animation: 0.3s;
