--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -16,6 +16,7 @@
 @import './blocks/main';
 @import './blocks/events';
 @import './blocks/gallery';
+@import './blocks/subscribe';
 
 * {
   margin: 0;
