--- a/src/styles/blocks/_gallery.scss
+++ b/src/styles/blocks/_gallery.scss
@@ -43,6 +43,7 @@
     background-size: cover;
     background-position: top center;
     background-repeat: no-repeat;
+    transition: all $time-animation;
 
     @include on-tablet {
       width: 340px;
@@ -51,6 +52,10 @@
 
     @include on-desktop {
       width: 100%;
+
+      &:hover {
+        transform: scale(1.05);
+      }
     }
 
     &-1 {
@@ -110,6 +115,7 @@
     border-radius: 50%;
     background-color: $color-dot;
     cursor: pointer;
+    transition: all $time-animation;
 
     &:hover {
       background-color: $color-dot-hover;
