--- a/src/styles/blocks/_subscribe.scss
+++ b/src/styles/blocks/_subscribe.scss
@@ -1,5 +1,4 @@
 .subscribe {
-  margin-bottom: 50px;
   padding-block: 88px;
   background-image: url('./../images/subscribe-bg.png');
   background-position: center;
@@ -50,9 +49,16 @@
 
   &__form {
     display: flex;
+    transition: all $time-animation;
 
     @include on-tablet {
       gap: 16px;
+    }
+
+    @include on-desktop{
+      &:hover {
+        transform: scale(1.2);
+      }
     }
   }
 
@@ -89,10 +95,18 @@
     background-position: center;
     background-size: 22px;
     background-repeat: no-repeat;
+    transition: all $time-animation;
 
     @include on-tablet {
       width: 70px;
       height: 70px;
+    }
+
+    @include on-desktop {
+      &:hover {
+        background-color: #d9644d;
+        cursor: pointer;
+      }
     }
   }
 }
