--- a/src/styles/modules/_icon.scss
+++ b/src/styles/modules/_icon.scss
@@ -5,12 +5,53 @@
   background-position: center;
   background-size: contain;
   background-repeat: no-repeat;
+  transition: all $time-animation;
 
   &-menu {
     background-image: url('./../images/icons/icon-menu.svg');
+
+    &:hover {
+      background-image: url('./../images/icons/icon-menu-hover.svg');
+
+      @include on-desktop {
+        transform: scale(1.2);
+      }
+    }
   }
 
   &-close {
     background-image: url('./../images/icons/icon-close.svg');
+
+    &:hover {
+      background-image: url('./../images/icons/icon-close-hover.svg');
+
+      @include on-desktop {
+        transform: scale(1.2);
+      }
+    }
+  }
+
+  &-facebook {
+    background-image: url('./../images/icons/icon-facebook.svg');
+
+    &:hover {
+      background-image: url('./../images/icons/icon-facebook-hover.svg');
+
+      @include on-desktop {
+        transform: scale(1.2);
+      }
+    }
+  }
+
+  &-instagram {
+    background-image: url('./../images/icons/icon-instagram.svg');
+
+    &:hover {
+      background-image: url('./../images/icons/icon-instagram-hover.svg');
+
+      @include on-desktop {
+        transform: scale(1.2);
+      }
+    }
   }
 }
