--- a/src/styles/modules/_logo.scss
+++ b/src/styles/modules/_logo.scss
@@ -6,4 +6,15 @@
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
+  transition: all $time-animation;
+
+  &-black {
+    background-image: url('./../images/logo-footer.svg');
+  }
+
+  @include on-desktop {
+    &:hover {
+      transform: scale(1.2);
+    }
+  }
 }
