--- a/src/styles/modules/_nav.scss
+++ b/src/styles/modules/_nav.scss
@@ -10,9 +10,14 @@
     display: block;
     width: 100px;
     color: $color-text-menu;
+    transition: color $time-animation;
 
     @include on-desktop {
       font-size: 22px;
+
+      &:hover {
+        color: #6d6a6a;
+      }
     }
   }
 }
