--- a/src/styles/utils/_variables.scss
+++ b/src/styles/utils/_variables.scss
@@ -23,6 +23,8 @@ $color-text-subscribe: #FFF;
 $color-text-input: #4d555e;
 $color-text-placeholder: #687480;
 $color-bg-btn: #F14A27;
+$color-text-footer: #0F0E08;
+$color-line-footer: #1A5A4C80;
 
 // Таймеры
 $time-animation: 0.3s;
