--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -17,6 +17,7 @@
 @import './blocks/events';
 @import './blocks/gallery';
 @import './blocks/subscribe';
+@import './blocks/footer';
 
 * {
   margin: 0;
