--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,6 +1,6 @@
-@import "utils";
-@import "fonts";
-@import "typography";
+@import 'utils';
+@import 'fonts';
+@import 'typography';
 @import 'reset';
 @import './blocks/topBar';
 @import './blocks/artMuseum';
