--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -18,7 +18,7 @@
     transform: translateY(0);
   }
 
-  &__container {
+  &__content {
     gap: 20px;
     display: grid;
   }
@@ -54,6 +54,7 @@
       display: grid;
       gap: 25px;
       grid-template-columns: repeat(2, 1fr);
+      max-width: 240px
     }
 
     &--schedule {
@@ -72,6 +73,7 @@
   &__bold {
     font-weight: 600;
   }
+
 
 
   &__icon-close {
