--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -14,6 +14,7 @@
 
 html {
   scroll-behavior: smooth;
+  overflow-x: hidden;
 }
 
 body {
@@ -51,13 +52,18 @@ body {
 }
 
 
+
 @media (min-width: 768px) {
   .menu {
     padding: 0;
 
     &__container {
-      grid-template-columns: repeat(2, 1fr);
       padding: 40px 20px;
+    }
+
+    &__content {
+      grid-template-columns: repeat(2, 1fr);
+      gap: 40px;
     }
 
     &__navigation {
@@ -69,7 +75,6 @@ body {
       &--navigation {
         width: 100%;
         height: 32px;
-        grid-template-columns: repeat(2, 1fr);
       }
     }
 
@@ -273,8 +278,18 @@ body {
 
   .menu {
     &__container {
-      gap: 100px;
       padding: 40px 0;
+    }
+
+    &__content {
+      gap: 100px;
+    }
+
+    &__list {
+      &--navigation {
+        height: auto;
+        max-width: 368px;
+      }
     }
 
     &__navigation {
@@ -318,6 +333,10 @@ body {
       align-items: flex-end;
       padding-bottom: 0;
       align-self: center;
+    }
+
+    &__add {
+      display: block;
     }
   }
 
