--- a/src/styles/blocks/actuals.scss
+++ b/src/styles/blocks/actuals.scss
@@ -12,14 +12,14 @@
   &__title {
     color: $dark-gray-text-color-second;
     text-align: center;
-    font-family: Monserrat, sans-serif;
+    font-family: Montserrat, sans-serif;
     font-size: 36px;
     line-height: 100%;
     font-weight: 700;
     margin-bottom: 40px;
 
     @include on-tablet {
-      // font-size: 48px;
+      font-size: 48px;
       text-align: left;
       margin-bottom: 48px;
     }
@@ -35,7 +35,7 @@
     gap: 60px;
 
     @include on-tablet {
-      gap: 64px;
+      gap: 64px
     }
 
     @include on-desktop {
