--- a/src/styles/blocks/button.scss
+++ b/src/styles/blocks/button.scss
@@ -6,7 +6,7 @@
     color: $dark-gray-text-color-second;
     font-size: 16px;
     font-weight: 500;
-    height: 50%;
+    height: 50px;
     width: 270px;
     line-height: 100%;
     display: flex;
@@ -33,7 +33,7 @@
       background-color: $black-color-text;
     }
 
-    .buttom__title {
+    .button__title {
       border-color: $black-color-text;
     }
   }
