--- a/src/styles/blocks/classicism.scss
+++ b/src/styles/blocks/classicism.scss
@@ -1,6 +1,6 @@
 .classicism {
   height: 210px;
-  background-image: url(../images/actuals/actuals-3.svg);
+  background-image: url('../images/actuals/actuals-3.svg');
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
@@ -16,66 +16,66 @@
     height: 550px;
   }
 
-  &__content {
-    padding: 20px 0;
-    background: $white-background-color;
-    box-shadow: 0 2px 0 0 rgba(26, 90, 76, 0.25);
-    transform: translateY(55%);
+&__content {
+  padding: 20px 0;
+  background: #FFF;
+  box-shadow: 0 2px 0 0 rgba(26, 90, 76, 0.25);
+  transform: translateY(55%);
 
-    @include on-tablet {
-      padding: 45px 100px 50px 55px;
-    }
-
-    @include on-desktop {
-      padding: 45px 100px 50px;
-    }
+  @include on-tablet {
+    padding: 45px 100px 50px 55px;
   }
 
-  &__data {
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    margin-bottom: 20px;
-
-    @include on-tablet {
-      justify-content: space-between;
-      margin-bottom: 16px;
-    }
+  @include on-desktop {
+    padding: 45px 100px 50px;
   }
+}
 
-  &__event {
-    color: $grayish-text-color-third;
-    font-size: 16px;
-    font-weight: 500;
-    line-height: 10%;
+&__data {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  margin-bottom: 20px;
 
-    @include on-tablet {
-      font-size: 14px;
-    }
+  @include on-tablet {
+    justify-content: space-between;
+    margin-bottom: 16px;
   }
+}
 
-  &__date {
-    color: $green-color-border-color;
-    font-weight: 700;
-    line-height: 150%;
+&__event {
+  color: $grayish-text-color-third;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 100%;
 
-    @include on-tablet {
-      font-size: 14px;
-      margin-right: 50px;
-    }
+  @include on-tablet {
+    font-size: 14px;
   }
+}
 
-  &__title {
-    color: $dark-gray-text-color-second;
-    font-family: Montserrat, sans-serif;
-    align-items: center;
-    font-size: 28px;
-    font-weight: 400;
-    line-height: 100%;
+&__date {
+  color: $green-color-border-color;
+  font-weight: 700;
+  line-height: 150%;
 
-    @include on-tablet {
-      font-size: 36px;
-      text-align: left;
-    }
+  @include on-tablet {
+    font-size: 14px;
+    margin-right: 50px;
   }
+}
+
+&__title {
+  color: $dark-gray-text-color-second;
+  font-family: Montserrat, sans-serif;
+  text-align: center;
+  font-size: 28px;
+  font-weight: 400;
+  line-height: 100%;
+
+  @include on-tablet {
+    font-size: 36px;
+    text-align: left;
+  }
+}
 }
