--- a/src/styles/blocks/contacts.scss
+++ b/src/styles/blocks/contacts.scss
@@ -3,12 +3,12 @@
 
   &__item-abs {
     position: absolute;
-    content: '';
+    content: "";
     right: 0;
-    bottom: -58px;
+    bottom: -50px;
     width: 50px;
     height: 50px;
-    background-image: url(../images/icons/close.svg);
+    background-image: url('../images/icons/Arrow-up.svg');
     background-size: cover;
 
     @include on-tablet {
