--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -13,7 +13,7 @@
     z-index: -1;
     position: absolute;
     display: block;
-    background-image: url(../images/Header/header-background.svg);
+    background-image: url('../images/Header/header-background.svg');
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -65,7 +65,7 @@
       grid-column: 1 / span 3;
       margin-top: 40px;
     }
-    
+
     @include on-desktop {
       grid-column: 1 / span 5;
       margin-top: 119px;
@@ -76,9 +76,9 @@
     display: block;
     height: 24px;
     width: 24px;
-    background-image: url(../images/icons/menu.svg);
+    background-image: url('../images/icons/menu.svg');
 
-    @include hover(transform, scale(1.1))
+    @include hover(transform, scale(1.1));
   }
 
   &__logo-wrapper {
@@ -97,14 +97,14 @@
     display: block;
 
     @include on-tablet {
-      display: none;
+      display:none
     }
   }
 
   &__logo-l {
     display: none;
 
-    @include on-desktop {
+    @include on-tablet {
       display: block;
       height: 70px;
     }
