--- a/src/styles/blocks/subscribe.scss
+++ b/src/styles/blocks/subscribe.scss
@@ -1,11 +1,11 @@
 .subscribe {
   padding-block: 88px;
-  background: rgba(0, 0 , 0, 0.75) url(../images/subscribe/subscribe.svg);
+  background: rgba(0, 0, 0, 0.75),url('../images/subscribe/subscribe.svg');
   background-position: center top;
   background-size: cover;
 
   @include on-tablet {
-    padding-block: 88px;
+    padding-block: 82px;
   }
 
   @include on-desktop {
