--- a/src/styles/blocks/nav.scss
+++ b/src/styles/blocks/nav.scss
@@ -14,10 +14,10 @@
   &__list {
     display: flex;
     flex-direction: column;
-    gap: 24px;
+    gap: 24px ;
     list-style: none;
 
-    @include on-tablet {
+    @include on-desktop {
       gap: 30px;
     }
   }
@@ -42,6 +42,5 @@
 
       @include hover(font-weight, bold);
     }
-
   }
 }
