--- a/src/styles/blocks/slides.scss
+++ b/src/styles/blocks/slides.scss
@@ -14,9 +14,9 @@
       margin-bottom: 40px;
     }
 
-    @include on-desktop {
+    @include on-desktop{
       grid-column: 1 / span 7;
-      margin-bottom: 0;
+      margin-bottom: 104px;
     }
 
     @include hover(transform, scale(1.05));
@@ -78,14 +78,14 @@
     align-items: center;
     margin-bottom: 10px;
 
-    @include on-tablet {
+    @include on-desktop {
       margin-bottom: 15px;
     }
   }
 
   &__title {
     color: $dark-gray-text-color-second;
-    font-family: Monserrat, sans-serif;
+    font-family: Montserrat, sans-serif;
     font-size: 28px;
     font-weight: 400;
     line-height: 100%;
