--- a/src/styles/blocks/work-days.scss
+++ b/src/styles/blocks/work-days.scss
@@ -1,6 +1,5 @@
 .work-days {
   position: relative;
-
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   column-gap: 20px;
@@ -15,7 +14,7 @@
     top: -20px;
     height: 1px;
     width: 100%;
-    background: rgba(256, 256, 256, 0.5);
+    background: rgba(255, 255, 255, 0.50);
 
     @include on-tablet {
       top: 0;
@@ -44,7 +43,7 @@
 
   &__date {
     grid-column: 1 / -1;
-    margin-bottom: -16px;
+    margin-bottom: 16px;
 
     &--marg {
       margin-bottom: 0;
@@ -58,6 +57,15 @@
 
   &__time {
     font-weight: 600;
+    line-height: 150%;
+
+    &--color-text {
+      color: $dark-gray-text-color-second;
+    }
+  }
+
+  &__day {
+    font-weight: 400;
     line-height: 150%;
 
     &--color-text {
