disable scroll when menu is opened, fix buttons

--- a/src/styles/blocks/artMuseum.scss
+++ b/src/styles/blocks/artMuseum.scss
@@ -41,7 +41,7 @@
     text-align: center;
     padding: 18px;
     max-width: 270px;
-    transition: all 0.3s;
+    transition: $all-transition;
 
     &::after {
       position: absolute;
@@ -58,7 +58,7 @@
 
     &:hover {
       border: 1px solid $red;
-      transform: scale(1.05);
+      transform: translateY(-5px);
       &::after {
         background-color: $red;
       }
