--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -25,6 +25,10 @@ body {
   font-family: Montserrat, sans-serif;
 }
 
+.page-body {
+  overflow: hidden;
+}
+
 [class*="__container"] {
   max-width: 1170px;
   margin: 0 auto;
