--- a/src/styles/blocks/subscribe.scss
+++ b/src/styles/blocks/subscribe.scss
@@ -61,7 +61,9 @@
     height: 50px;
     background-color: $red;
     position: relative;
-    transition: $main-transition;
+    transition: $all-transition;
+    font-family: "IBM Plex Sans", sans-serif;
+    overflow: hidden;
 
     &::after {
       content: '>';
@@ -70,10 +72,15 @@
       left: 50%;
       top: 50%;
       transform: translateY(-50%) translateX(-50%);
+      transition: all 0.7s;
     }
 
     &:hover {
-      transform: scale(1.1);
+      background-color: $green;
+
+      &::after {
+        transform: translateY(-50%) translateX(250%);
+      }
     }
   }
 }
